# structured-prompts

./: .env.template  .gitignore  .mcp.json  MCP_TEST_PROMPT.md  PROMPT_TEST.md  QUICK_TEST.md  README.md  SMART_TEST_PROMPT.md  TEST_PROMPT.md  add-messages-to-structure-and-system-instructions.md  database_sql_queries  demo.js  demo.ts  nuevo_README.md  package.json  pyproject.toml  setup.py  setup.sh  test-mcp.js  test-mcp.ts  test-script.js  test-script.ts  test.test.js  test.test.ts  test_fixes.py  tsconfig.json
.claude/: .gitignore  ADVANCED.md  EVENTS.md  LOCAL.md  README.md  config.json
examples/: basic_usage.py  simple_usage.py
gemini_prompt_schema/: database.py  models.py  schema_manager.py
gemini_structured_response_prompts_database/: database.py  models.py  schema_manager.py
scripts/: install_dependencies.sh
src/: demo-glm.js  demo-glm.ts  demo.js  demo.ts  index.js  index.ts  seed.ts
src/capabilities/: index.js  index.ts  model-config.js  model-config.ts
src/database/: client.js  client.ts  index.js  index.ts
src/interfaces/: README.md  index.js  index.ts  mcp.js  mcp.py  mcp.ts
src/managers/: index.js  index.ts  schema-manager.js  schema-manager.ts
src/models/: database.js  database.ts  index.js  index.ts  schema.js  schema.ts
src/structured_prompts/: models.py
src/validation/: index.js  index.ts  input-validator.js  input-validator.ts
tests/: test_sqlite_integration.py
