[tool.poetry]
name = "structured_prompts"
version = "0.1.0"
description = "A modular package for managing structured prompts with any LLM API"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
structured-prompts-mcp = "src.interfaces.mcp:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
sqlalchemy = ">=1.4.42,<1.5"
pydantic = "^2.5.0"
databases = "^0.8.0"
asyncpg = "^0.29.0"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
